--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,15 +2,22 @@ env:
   browser: true
   commonjs: true
   es6: true
-extends: 'eslint:recommended'
+extends:
+  - 'eslint:recommended'
+  - 'plugin:vue/essential'
+
 parserOptions:
-  ecmaFeatures:
-    jsx: true
   sourceType: module
 rules:
+  vue/html-indent:
+    - error
+    - 2
+  vue/script-indent:
+    - error
+    - o
   indent:
     - error
-    - 4
+    - 2
   linebreak-style:
     - error
     - unix
