--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-loader": "^1.0.0",
     "eslint": "^5.2.0",
     "eslint-loader": "^2.1.0",
+    "eslint-plugin-vue": "^5.0.0-beta.1",
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.8.0",
@@ -32,6 +33,7 @@
     "vue": "^2.5.16",
     "vue-loader": "^15.2.6",
     "vue-router": "^3.0.1",
+    "vue-style-loader": "^4.1.1",
     "webpack": "^4.16.2",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.22.3",
